JG-2007-11-29-0: Enhancem.: added check bugs/issuezilla/2433
                 Review:    RD

JO-2007-11-28-0: Enhancem.: Putback of view correction JO-2007-10-12-0

LP-2007-11-28-0: Enhancem.: Putback of interface changes AP-2007-10-12-0
                 Enhancem.: JGDI support in testsuite
                 Bugfix:    Fixed some bugs causing TCL errors
                 Review:    JG

AA-2007-11-28-0: Bugfix:    broken automatic install
                 Review:    RD

RD-2007-11-26-0: Bugfix:    reduced qmaster shutdown timeout value
                 Review:    CR

CR-2007-11-26-0: Bugfix:    Fixed possible problem with login 
                 Review:    JG

EB-2007-11-23-0: Cleanup:   o changed monitoring test according to changes in 
                              gridengine code
                 Review:    JG 

JG-2007-11-22-0: Enhancem.: Improved autoinstall of large numbers of exec hosts.
                 Bugfix:    Fixed install re_init when 
                            CHECK_TESTSUITE_INSTALL_MODE is set to "automatic"
                 Review:    MD

AH-2007-11-22-0: Enhancem.: Enabled inactive test bugs/issuezilla/1832 for 
                            the 6.2 -hold_jid_ad option
                 Review:    CR

CR-2007-11-21-0: Enhancem.: o added menu item for running only startup hooks
                            o connection test now also tests java compile host
                            o improved shutdown behaviour for blocking lx-24 qmaster 
                              threads (processes)
                 Bugfix:    o fixed shutdown/restart for hedeby (not all managed
                              hosts was started)
                            o updated hedeby testsuite for new 
                              ShowComponentStatusCliCommand (hedeby issue #204)
                 Review:    RH

JG-2007-11-21-0: Enhancem.: Added test bugs/issuezilla/2419.
                 Review:    MD

MP-2007-11-20-0: Bugfix:    Added test for qstat -j xml and plain output